--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Queue Visualizer (FIFO / Circular / Deque / Priority)</title>
+  <title>🚀 Queue Visualizer (All Types)</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #e3f2fd, #ffffff);
-      text-align: center;
+      background: linear-gradient(135deg, #e3f2fd, #ffffff);
+      margin: 0;
       padding: 20px;
+      text-align: center;
     }
 
     h1 {
@@ -16,59 +21,73 @@
       margin-bottom: 10px;
     }
 
-    .settings {
-      margin: 20px 0;
+    .settings, .controls {
+      margin: 10px 0;
     }
 
-    .settings input, select {
-      padding: 6px 10px;
+    input, select, button {
+      padding: 10px;
       margin: 5px;
       font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .controls button {
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      transition: 0.3s;
+    }
+
+    .controls button:hover {
+      background-color: #0d47a1;
     }
 
     .queue-container {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      min-height: 100px;
-      padding: 20px;
-      border: 2px dashed #1565c0;
-      margin-bottom: 20px;
-      background-color: #e1f5fe;
-      border-radius: 10px;
+      min-height: 120px;
+      margin: 20px auto;
+      padding: 15px;
+      border: 3px dashed #1976d2;
+      background-color: #f0f9ff;
+      border-radius: 12px;
+      max-width: 400px;
     }
 
     .box {
       width: 60px;
       height: 60px;
       margin: 5px;
-      line-height: 60px;
-      font-weight: bold;
-      color: white;
       background-color: #00bcd4;
-      border-radius: 8px;
-      transition: all 0.4s ease;
-    }
-
-    .controls button {
-      padding: 10px 15px;
-      margin: 4px;
-      font-size: 14px;
-      background: #1976d2;
-      border: none;
-      border-radius: 6px;
       color: white;
-      cursor: pointer;
+      font-weight: bold;
+      line-height: 60px;
+      border-radius: 10px;
+      opacity: 0;
+      transform: scale(0.5);
+      animation: appear 0.4s ease-out forwards;
     }
 
-    .controls button:hover {
-      background: #0d47a1;
+    @keyframes appear {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     #message {
-      color: red;
-      margin-top: 10px;
+      color: crimson;
       font-weight: bold;
+      margin-top: 10px;
+    }
+
+    @media (max-width: 768px) {
+      .queue-container {
+        max-width: 90%;
+      }
     }
   </style>
 </head>
@@ -96,7 +115,6 @@
   </div>
 
   <div id="message"></div>
-
   <div class="queue-container" id="queueDisplay"></div>
 
   <script>
@@ -105,7 +123,7 @@
 
     function updateDisplay() {
       const display = document.getElementById('queueDisplay');
-      display.innerHTML = '';
+      display.innerHTML = ''; // clear old queue
       queue.forEach(item => {
         const box = document.createElement('div');
         box.className = 'box';
@@ -127,8 +145,8 @@
       getMaxSize();
       const val = document.getElementById('valueInput').value.trim();
       const type = document.getElementById('queueType').value;
-      if (!val) return showMessage("Enter a value");
-      if (queue.length >= max) return showMessage("Queue Overflow");
+      if (!val) return showMessage("⚠️ Enter a value");
+      if (queue.length >= max) return showMessage("❌ Queue Overflow");
 
       if (type === 'priority') {
         queue.push({ value: val, priority: parseInt(val) || 0 });
@@ -139,10 +157,11 @@
 
       updateDisplay();
       showMessage('');
+      document.getElementById('valueInput').value = '';
     }
 
     function dequeue() {
-      if (queue.length === 0) return showMessage("Queue Underflow");
+      if (queue.length === 0) return showMessage("❌ Queue Underflow");
       queue.shift();
       updateDisplay();
       showMessage('');
@@ -152,8 +171,8 @@
       getMaxSize();
       const val = document.getElementById('valueInput').value.trim();
       const type = document.getElementById('queueType').value;
-      if (!val) return showMessage("Enter a value");
-      if (queue.length >= max) return showMessage("Queue Overflow");
+      if (!val) return showMessage("⚠️ Enter a value");
+      if (queue.length >= max) return showMessage("❌ Queue Overflow");
 
       if (type === 'priority') {
         queue.push({ value: val, priority: parseInt(val) || 0 });
@@ -161,21 +180,22 @@
       } else if (type === 'deque' || type === 'circular') {
         queue.unshift({ value: val });
       } else {
-        return showMessage("Front insertion not allowed in FIFO");
+        return showMessage("⛔ Not allowed in FIFO");
       }
 
       updateDisplay();
       showMessage('');
+      document.getElementById('valueInput').value = '';
     }
 
     function dequeueRear() {
       const type = document.getElementById('queueType').value;
-      if (queue.length === 0) return showMessage("Queue Underflow");
+      if (queue.length === 0) return showMessage("❌ Queue Underflow");
 
       if (type === 'deque' || type === 'circular') {
         queue.pop();
       } else {
-        return showMessage("Rear removal not allowed in FIFO or Priority");
+        return showMessage("⛔ Not allowed in FIFO or Priority");
       }
 
       updateDisplay();
@@ -188,5 +208,6 @@
       showMessage('');
     }
   </script>
+
 </body>
 </html>
