--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🚀 Queue Visualizer (All Types)</title>
+  <title>📱 Portrait Queue Visualizer</title>
   <style>
     * {
       box-sizing: border-box;
@@ -22,12 +22,17 @@
     }
 
     .settings, .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       margin: 10px 0;
     }
 
     input, select, button {
+      width: 90%;
+      max-width: 300px;
       padding: 10px;
-      margin: 5px;
+      margin: 6px 0;
       font-size: 16px;
       border-radius: 6px;
       border: 1px solid #ccc;
@@ -46,15 +51,15 @@
 
     .queue-container {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
-      min-height: 120px;
+      justify-content: center;
+      min-height: 100px;
       margin: 20px auto;
       padding: 15px;
       border: 3px dashed #1976d2;
       background-color: #f0f9ff;
       border-radius: 12px;
-      max-width: 400px;
+      max-width: 90%;
     }
 
     .box {
@@ -83,17 +88,11 @@
       font-weight: bold;
       margin-top: 10px;
     }
-
-    @media (max-width: 768px) {
-      .queue-container {
-        max-width: 90%;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <h1>🚀 Queue Visualizer</h1>
+  <h1>📱 Portrait Queue Visualizer</h1>
 
   <div class="settings">
     <input type="number" id="maxSize" placeholder="Max Size" min="1" />
@@ -123,7 +122,7 @@
 
     function updateDisplay() {
       const display = document.getElementById('queueDisplay');
-      display.innerHTML = ''; // clear old queue
+      display.innerHTML = '';
       queue.forEach(item => {
         const box = document.createElement('div');
         box.className = 'box';
