--- a/index.html
+++ b/index.html
@@ -1,103 +1,109 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>📱 Portrait Queue Visualizer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🚀 Queue Visualizer (Mobile)</title>
   <style>
     * {
       box-sizing: border-box;
-    }body {
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #e3f2fd, #ffffff);
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
+    }
 
-h1 {
-  color: #0d47a1;
-  margin: 20px 0 10px;
-}
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #f3e5f5, #e8f5e9);
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
 
-.settings, .controls {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  padding: 0 20px;
-}
+    h1 {
+      color: #6a1b9a;
+      margin-bottom: 15px;
+      font-size: 28px;
+    }
 
-input, select, button {
-  width: 100%;
-  max-width: 300px;
-  padding: 10px;
-  margin: 6px 0;
-  font-size: 16px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-}
+    .settings, .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
 
-.controls button {
-  background-color: #1976d2;
-  color: white;
-  border: none;
-  transition: 0.3s;
-}
+    input, select, button {
+      width: 90%;
+      max-width: 300px;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
 
-.controls button:hover {
-  background-color: #0d47a1;
-}
+    .controls button {
+      background-color: #7b1fa2;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s;
+    }
 
-.queue-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  margin: 20px auto;
-  padding: 15px;
-  border: 3px dashed #1976d2;
-  background-color: #f0f9ff;
-  border-radius: 12px;
-  width: 90%;
-  min-height: 60vh;
-  overflow-y: auto;
-}
+    .controls button:hover {
+      background-color: #4a148c;
+    }
 
-.box {
-  width: 80%;
-  height: 60px;
-  margin: 5px;
-  background-color: #00bcd4;
-  color: white;
-  font-weight: bold;
-  line-height: 60px;
-  border-radius: 10px;
-  opacity: 0;
-  transform: scale(0.5);
-  animation: appear 0.4s ease-out forwards;
-}
+    .queue-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      min-height: 140px;
+      padding: 20px;
+      margin-bottom: 20px;
+      background-color: #f3f3f3;
+      border-radius: 12px;
+      border: 3px dashed #7b1fa2;
+    }
 
-@keyframes appear {
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+    .box {
+      width: 60px;
+      height: 60px;
+      margin: 6px;
+      background-color: #ab47bc;
+      color: white;
+      font-weight: bold;
+      line-height: 60px;
+      border-radius: 12px;
+      opacity: 0;
+      transform: scale(0.5);
+      animation: appear 0.3s ease-out forwards;
+    }
 
-#message {
-  color: crimson;
-  font-weight: bold;
-  margin-top: 10px;
-}
+    @keyframes appear {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
 
+    #message {
+      font-weight: bold;
+      color: #d32f2f;
+      margin-top: 10px;
+      font-size: 16px;
+    }
+
+    @media (max-width: 768px) {
+      .queue-container {
+        max-width: 90%;
+      }
+    }
   </style>
 </head>
-<body>  <h1>📱 Portrait Queue Visualizer</h1>  <div class="settings">
+<body>
+
+  <h1>🚀 Queue Visualizer</h1>
+
+  <div class="settings">
     <input type="number" id="maxSize" placeholder="Max Size" min="1" />
     <select id="queueType">
       <option value="fifo">FIFO Queue</option>
@@ -106,14 +112,22 @@ input, select, button {
       <option value="priority">Priority Queue</option>
     </select>
     <input type="text" id="valueInput" placeholder="Enter value" />
-  </div>  <div class="controls">
+  </div>
+
+  <div class="controls">
     <button onclick="enqueue()">Enqueue ➡️</button>
     <button onclick="dequeue()">Dequeue ⬅️</button>
     <button onclick="enqueueFront()">Enqueue Front ⬅️</button>
     <button onclick="dequeueRear()">Dequeue Rear ➡️</button>
+    <button onclick="peek()">👀 Peek</button>
     <button onclick="resetQueue()">🔄 Reset</button>
-  </div>  <div id="message"></div>
-  <div class="queue-container" id="queueDisplay"></div>  <script>
+  </div>
+
+  <div id="message"></div>
+
+  <div class="queue-container" id="queueDisplay"></div>
+
+  <script>
     let queue = [];
     let max = 5;
 
@@ -198,10 +212,17 @@ input, select, button {
       showMessage('');
     }
 
+    function peek() {
+      if (queue.length === 0) return showMessage("🚫 Queue is empty");
+      showMessage("👀 Front: " + queue[0].value);
+    }
+
     function resetQueue() {
       queue = [];
       updateDisplay();
       showMessage('');
     }
-  </script></body>
+  </script>
+
+</body>
 </html>
